--- a/src/main/frontend/src/index.css
+++ b/src/main/frontend/src/index.css
@@ -5,7 +5,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-image: url("../public/bg.jpg");
+
   background-size: cover;
   font-family: "Karla", sans-serif;
 }
@@ -21,6 +21,8 @@ code {
   font-weight: bolder;
   color: black;
   background-color: white;
+  display: flex;
+  justify-content: center;
 }
 
 .input {
@@ -44,23 +46,27 @@ code {
 
 .des {
   margin-bottom: 15px;
-  background-color: #add8e6;
+  background-color: black;
   font-weight: 600;
+  color: white;
 }
 
 .wholeProfile {
   background-color: white;
-  margin-left: 20%;
-  margin-right: 20%;
+  margin-left: 3%;
+  margin-right: 3%;
   margin-bottom: 10px;
-  background-size: cover;
-  padding: 15px;
+
+  /* padding: 10px; */
   border-radius: 5%;
 }
 
 .upload {
-  color: #00ced1;
+  color: purple;
   font-weight: 600;
+  height: 200px;
+  align-items: center;
+  justify-content: center;
 }
 
 .img-delete {
@@ -84,4 +90,26 @@ code {
 
 .name {
   font-weight: bolder;
+}
+.container {
+  display: flex;
+  flex-wrap: wrap;
+  width: 100%;
+}
+
+.like {
+  margin-left: 25px;
+  margin-top: 10px;
+}
+
+.comment {
+  margin-left: 25px;
+  margin-top: 10px;
+}
+.uw {
+  margin-top: 50%;
+}
+
+.happyFace {
+  margin-right: 2px;
 }
