--- a/src/main/frontend/src/index.css
+++ b/src/main/frontend/src/index.css
@@ -83,6 +83,7 @@ code {
   display: flex;
   justify-content: center;
   align-items: center;
+  cursor: pointer;
 }
 
 #trashBin {
@@ -101,6 +102,7 @@ code {
 .like {
   margin-left: 25px;
   margin-top: 10px;
+  cursor: pointer;
 }
 
 .uw {
@@ -108,6 +110,7 @@ code {
 .comment {
   position: absolute;
   left: 205px;
+  cursor: pointer;
 }
 
 .happyFace {
@@ -121,6 +124,7 @@ code {
 .addComment {
   display: flex;
   position: relative;
+  cursor: pointer;
 }
 .commentWords {
   font-size: medium;
